--- a/HernandezEscobar_210725/nbproject/private/private.properties
+++ b/HernandezEscobar_210725/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\UFG\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\mark0\\AppData\\Roaming\\NetBeans\\25\\build.properties
